force-app/main/default/objects/numm__FADisposal__c/numm__FADisposal__c.object-meta.xml
<CustomObject>
    <description>Objet des types de cession</description>
    <label>Cession</label>
    <nameField>
        <label>Cession</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>