force-app/main/default/objects/numm__FADisposal__c/fields/numm__DisposalCode__c.field-meta.xml
<CustomField>
    <fullName>numm__DisposalCode__c</fullName>
    <label>Type de cession</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>APP</fullName>
            </value>
            <value>
                <fullName>AUT</fullName>
            </value>
            <value>
                <fullName>DEM</fullName>
            </value>
            <value>
                <fullName>DES</fullName>
            </value>
            <value>
                <fullName>DON</fullName>
            </value>
            <value>
                <fullName>IMM</fullName>
            </value>
            <value>
                <fullName>MAR</fullName>
            </value>
            <value>
                <fullName>ONE</fullName>
            </value>
            <value>
                <fullName>REB</fullName>
            </value>
            <value>
                <fullName>VEN</fullName>
            </value>
            <value>
                <fullName>VOL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>