force-app/main/default/objects/numm__FADisposal__c/fields/numm__IsAllowExcepDispos__c.field-meta.xml
<CustomField>
    <fullName>numm__IsAllowExcepDispos__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Permet la comptabilisation de la dotation exceptionnelle sur ce type de cession</inlineHelpText>
    <label>Compta.  dotation exceptionnelle</label>
    <type>Checkbox</type>
</CustomField>