force-app/main/default/objects/numm__FADisposal__c/fields/numm__IsSale__c.field-meta.xml
<CustomField>
    <fullName>numm__IsSale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vente</label>
    <type>Checkbox</type>
</CustomField>