force-app/main/default/objects/numm__FADisposal__c/fields/numm__IsSystem__c.field-meta.xml
<CustomField>
    <fullName>numm__IsSystem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Système</label>
    <type>Checkbox</type>
</CustomField>