force-app/main/default/objects/numm__FADisposal__c/fields/numm__IsVAT__c.field-meta.xml
<CustomField>
    <fullName>numm__IsVAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TVA</label>
    <type>Checkbox</type>
</CustomField>